--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@ img {
     margin-top: 150px;
 }
 
-#searchbar {
+#search {
     position: relative;
-    background-color: gray;
+    width: 250px;
+    height: 100px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
