--- a/style.css
+++ b/style.css
@@ -5,12 +5,16 @@ img {
     margin-top: 156px;
 }
 
-#search {
+input {
     position: relative;
-    width: 550px;
-    height: 10000px;
+    width: 45.5%;
+    height: 39px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 60px;
+    margin-top: 30px;
+    border-color: lightgray lightgray;
+    border-radius: 25px 25px;
+    border-width: 1px;
+    box-shadow: 0px 0px 0px 0px;
 }
