--- a/style.css
+++ b/style.css
@@ -21,37 +21,52 @@ input {
 
 /*Insert input hover element*/
 
-ul {
-    list-style-type: none;
+a {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    position: absolute;
-    top: 0;
-    font-size: 16px;
-    display: flex;
-    font-family: 'Courier New', Courier, monospace;
 }
 
-li {
+li, a {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    list-style-type: none;
+    text-decoration: none;
+    color: #222;
+}
+
+button {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    border: none;
+    list-style-type: none;
+    text-decoration: none;
+    color: white;
+    background-color: #4c8bf5;
+    padding: 8px 14px;
+}
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 5px 5px;
 }
 
-/*.flexStart {
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
+nav li {
+    display: inline-block;
+    padding: 0 7px;
 }
 
-.flexEnd {
-    display: flex;
-    justify-content: flex-end
-}*/
+.nav_1 {
+    margin-top: -575px;
+    margin-left: -35px;
+}
 
-a {
-    color: black;
-    text-decoration: none;
+.nav_2 {
+    margin-top: -575px;
+    margin-left: -35px;
 }
 
 a:hover {
