--- a/style.css
+++ b/style.css
@@ -35,16 +35,16 @@ li, a {
     color: #222;
 }
 
-button {
+.sign_in_button {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
+    font-size: 13px;
     font-weight: bold;
     border: none;
     list-style-type: none;
     text-decoration: none;
     color: white;
     background-color: #4c8bf5;
-    padding: 8px 14px;
+    padding: 7px 13px;
 }
 
 nav {
@@ -66,9 +66,43 @@ nav li {
 
 .nav_2 {
     margin-top: -575px;
-    margin-left: -35px;
+    margin-right: 11px;
 }
 
 a:hover {
     text-decoration: underline;
+}
+
+.fa {
+    padding: 0 3px;
+    color: gray;
+}
+
+.fa:hover {
+    color: black;
+}
+#google_search {
+    color: black;
+    background: gray;
+    border-radius: 25px 25px;
+    border-width: 1px;
+}
+
+#feeling_lucky {
+    color: black;
+    background: gray;
+}
+
+.search_buttons {
+    position: relative;
+    width: 45.5%;
+    height: 39px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    border-color: lightgray lightgray;
+    border-radius: 25px 25px;
+    border-width: 1px;
+    box-shadow: 0px 0px 0px 0px;
 }
